# repo2llm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
repo2llm/: cli.py  constants.py  core.py
repo2llm/formatters/: __init__.py  base.py
scripts/: version.py
tests/: test_cli.py  test_config.py  test_core.py  test_generic_formatter.py
